--- a/css/style.css
+++ b/css/style.css
@@ -42,13 +42,14 @@ body {
 }
 
 .blukicx-logo {
-  background-color: white;
-  opacity: 32%;
-  border: solid black 2px;
-  border-radius: 5px;
+  background-color: transparent;
+  /* opacity: 32%; */
+  /* border: solid black 2px; */
+  /* border-radius: 5%; */
   padding: 10px;
   height: 75px;
   width: 75px;
+  margin-top: 0;
 }
 
 .container {
@@ -101,6 +102,7 @@ body {
 }
 
 #top2 {
+  display:flex;
   z-index: 30;
   background: none;
   transition: all 0.3s ease-out;
@@ -115,7 +117,7 @@ body {
 }
 
 .top2 {
-  padding-top: 40px;
+  padding-top: 10px;
   padding-bottom: 1px;
   transition: all 0.3s ease-out;
   -moz-transition: all 0.3s ease-out;
@@ -124,7 +126,7 @@ body {
 }
 
 .is-sticky .top2 {
-  padding-top: 27px;
+  padding-top: 9px;
   padding-bottom: 14px;
 }
 
@@ -1826,7 +1828,9 @@ header {
   padding-top: 25px;
   padding-bottom: 45px;
 }
-
+.smallicons_clearfix{
+  margin: 1px;
+}
 .social {
   display: block;
   margin: 0;
@@ -1906,7 +1910,7 @@ header {
 }
 
 .bot_menu {
-  padding: 0;
+  padding: ;
   margin: 0;
   list-style: none;
 }
@@ -3194,3 +3198,4 @@ h5 {
 
 
 }
+
